--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
     <!-- Custom Styles -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- Custom Styles -->
-    <link rel="stylesheet" href="style.css">
-
 <style>
     /* Mobile-specific styles for the right sidebar */
     @media (max-width: 767px) {
@@ -204,7 +201,7 @@
                         <h2 class="text-xl sm:text-2xl font-bold text-slate-100 mb-2">Quiz Time!</h2>
                         <p id="quiz-progress-text" class="text-sm text-slate-400 mb-4">Question 1 of 5</p>
                         <div class="w-full bg-slate-700/50 rounded-full h-2 mb-6">
-                            <div id="quiz-progress-bar" class="bg-violet-600 h-2 rounded-full transition-all duration-300" style="width: 20%"></div>
+                            <div id="quiz-progress-bar" class="bg-seance-500 h-2 rounded-full transition-all duration-300" style="width: 20%"></div>
                         </div>
                         <p id="quiz-question" class="text-lg font-semibold text-slate-100 mb-6 min-h-[56px]"></p>
                         <div id="quiz-options" class="grid grid-cols-1 sm:grid-cols-2 gap-3 mb-6"></div>
