--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                 <div class="flashcard-front absolute w-full h-full bg-slate-800/80 rounded-xl flex items-center justify-center p-6 text-center">
                                     <p id="flashcard-question" class="text-lg sm:text-xl font-semibold text-slate-100"></p>
                                 </div>
-                                <div class="flashcard-back absolute w-full h-full bg-accent/20 rounded-xl flex items-center justify-center p-6 text-center">
+                                <div class="flashcard-back absolute w-full h-full rounded-xl flex items-center justify-center p-6 text-center">
                                     <p id="flashcard-answer" class="text-md sm:text-lg text-slate-100"></p>
                                 </div>
                             </div>
@@ -344,6 +344,10 @@
                 <div>
                     <label for="register-password" class="text-sm font-medium text-slate-300">Password</label>
                     <input type="password" id="register-password" class="w-full bg-slate-800/60 border-slate-700/50 rounded-lg py-2.5 px-3 text-slate-100 mt-1" placeholder="••••••••">
+                </div>
+                <div>
+                    <label for="register-password-confirm" class="text-sm font-medium text-slate-300">Confirm Password</label>
+                    <input type="password" id="register-password-confirm" class="w-full bg-slate-800/60 border-slate-700/50 rounded-lg py-2.5 px-3 text-slate-100 mt-1" placeholder="••••••••">
                 </div>
                 <button type="submit" id="register-button" class="w-full bg-accent hover:bg-accent/80 text-primary-text rounded-lg py-2.5 font-semibold">Create Account</button>
             </form>
