Updated: light theme correct and incorrect highlight for quiz options

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <span>Login & Sign Up</span>
                     </button>
                     <button id="open-settings-button" class="w-full flex items-center gap-3 p-2 rounded-lg hover:bg-slate-800/50 transition-colors hidden">
-                        <img class="h-9 w-9 rounded-full" src="https://placehold.co/100x100/7c3aed/ffffff?text=U" alt="User avatar">
+                        <svg class="h-9 w-9 rounded-full bg-slate-800/50 text-slate-200" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
                         <div class="text-left">
                             <p class="font-semibold text-sm text-slate-200">Test User</p>
                             <p class="text-xs text-slate-400">test@example.com</p>
@@ -196,7 +196,7 @@
                     </div>
                 </main>
 
-                <main id="quiz-view" class="view hidden flex-grow flex-col glass-effect rounded-2xl shadow-2xl max-w-3xl w-full mx-auto overflow-hidden">
+                <main id="quiz-view" class="view hidden flex-grow flex flex-col glass-effect rounded-2xl shadow-2xl max-w-3xl w-full mx-auto overflow-hidden">
                     <div class="p-4 sm:p-6 h-full overflow-y-auto">
                         <h2 class="text-xl sm:text-2xl font-bold text-slate-100 mb-2">Quiz Time!</h2>
                         <p id="quiz-progress-text" class="text-sm text-slate-400 mb-4">Question 1 of 5</p>
