--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
     <div id="toast-container" class="fixed top-5 right-5 z-50 space-y-2"></div>
 
     <!-- Background Animation -->
-    <div id="background-animation" class="absolute top-0 left-0 w-full h-full -z-10 overflow-hidden">
-        <!-- Animated blobs will be injected here by JavaScript -->
-    </div>
+    <canvas id="background-animation" class="absolute top-0 left-0 w-full h-full -z-10"></canvas>
     
     <div class="relative flex flex-col md:flex-row h-screen overflow-hidden">
         <!-- Left Sidebar Handle (desktop) -->
