--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                     <button id="open-settings-button" class="w-full flex items-center gap-3 p-2 rounded-lg hover:bg-slate-800/50 transition-colors hidden">
                         <svg class="h-9 w-9 rounded-full bg-slate-800/50 text-slate-200" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
                         <div class="text-left">
-                            <p class="font-semibold text-sm text-slate-200">Test User</p>
-                            <p class="text-xs text-slate-400">test@example.com</p>
+                            <p id="user-username" class="font-semibold text-sm text-slate-200">Test User</p>
+                            <p class="text-xs text-slate-400">Logged In</p>
                         </div>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ml-auto lucide lucide-settings-2 h-5 w-5 text-slate-400"><path d="M20 7h-9"/><path d="M14 17H5"/><circle cx="17" cy="17" r="3"/><circle cx="7" cy="7" r="3"/></svg>
                     </button>
@@ -306,13 +306,14 @@
             <h2 class="text-xl sm:text-2xl font-bold text-slate-100 mb-6 text-center">Welcome Back</h2>
             <form id="login-form" class="space-y-4">
                 <div>
-                    <label for="email" class="text-sm font-medium text-slate-300">Email</label>
-                    <input type="email" id="email" class="w-full bg-slate-800/60 border-slate-700/50 rounded-lg py-2.5 px-3 text-slate-100 mt-1" placeholder="you@example.com">
+                    <label for="login-username" class="text-sm font-medium text-slate-300">Username</label>
+                    <input type="text" id="login-username" class="w-full bg-slate-800/60 border-slate-700/50 rounded-lg py-2.5 px-3 text-slate-100 mt-1" placeholder="YourUsername">
                 </div>
                 <div>
                     <label for="password" class="text-sm font-medium text-slate-300">Password</label>
                     <input type="password" id="password" class="w-full bg-slate-800/60 border-slate-700/50 rounded-lg py-2.5 px-3 text-slate-100 mt-1" placeholder="••••••••">
                 </div>
+                <div class="form-error text-red-400 text-sm text-center h-4"></div>
                 <button type="submit" id="login-button" class="w-full bg-accent hover:bg-accent/80 text-primary-text rounded-lg py-2.5 font-semibold">Login</button>
             </form>
             <p class="text-center text-sm text-slate-400 my-4">Don't have an account? 
@@ -345,6 +346,7 @@
                     <label for="register-password-confirm" class="text-sm font-medium text-slate-300">Confirm Password</label>
                     <input type="password" id="register-password-confirm" class="w-full bg-slate-800/60 border-slate-700/50 rounded-lg py-2.5 px-3 text-slate-100 mt-1" placeholder="••••••••">
                 </div>
+                <div class="form-error text-red-400 text-sm text-center h-4"></div>
                 <button type="submit" id="register-button" class="w-full bg-accent hover:bg-accent/80 text-primary-text rounded-lg py-2.5 font-semibold">Create Account</button>
             </form>
             <button id="close-register-modal" class="absolute top-4 right-4 p-2 rounded-full bg-slate-800/60 hover:bg-slate-700/80 text-slate-300">
@@ -394,6 +396,13 @@
                 <div>
                     <h3 class="text-sm font-semibold text-slate-300 mb-2">Manage Files</h3>
                     <ul id="manage-files-list" class="space-y-2"></ul>
+                </div>
+                <!-- Logout Button -->
+                <div class="border-t border-border-main pt-4">
+                    <button id="logout-button" class="w-full flex items-center justify-center gap-2 py-2.5 px-4 bg-red-600/80 hover:bg-red-600/100 text-white rounded-lg transition-colors text-sm font-semibold">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out h-5 w-5"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" y1="12" x2="9" y2="12"/></svg>
+                        <span>Logout</span>
+                    </button>
                 </div>
             </div>
         </div>
