Updated: login state

--- a/index.html
+++ b/index.html
@@ -439,6 +439,12 @@
         </div>
     </div>
 
+    <!-- Markdown & Sanitizer Libraries -->
+    <!-- marked.js for Markdown to HTML conversion -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <!-- DOMPurify for sanitizing HTML to prevent XSS -->
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@latest/dist/purify.min.js"></script>
+
     <script src="script.js"></script>
 
 </body>
