--- a/index.html
+++ b/index.html
@@ -137,14 +137,7 @@
                 <!-- Chat Container -->
                 <main id="chat-view" class="view flex-grow flex flex-col glass-effect rounded-2xl shadow-2xl max-w-3xl w-full mx-auto overflow-hidden">
                     <div id="chat-window" class="flex-grow p-4 space-y-4 sm:p-6 sm:space-y-6 overflow-y-auto">
-                        <div class="flex items-start gap-2.5 sm:gap-3">
-                            <div class="flex-shrink-0 w-8 h-8 sm:w-10 sm:h-10 rounded-full bg-accent/20 flex items-center justify-center">
-                                 <svg class="w-5 h-5 sm:w-6 sm:h-6 text-accent" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"/></svg>
-                            </div>
-                            <div class="bg-slate-800/50 rounded-2xl rounded-tl-none p-3 sm:p-4 max-w-[80%] sm:max-w-md">
-                                <p class="text-slate-200">Hello! I'm the Starlight RAG assistant. How can I help you today?</p>
-                            </div>
-                        </div>
+
                     </div>
                     <div id="typing-indicator" class="hidden p-4 pt-0 sm:p-6 sm:pt-0">
                         <div class="flex items-start gap-2.5 sm:gap-3">
@@ -160,7 +153,7 @@
                     </div>
                     <div class="p-2 sm:p-4 border-t border-border-main">
                         <form id="chat-form" class="flex items-center gap-2 sm:gap-3">
-                            <input type="text" id="message-input" placeholder="Ask a question..." class="flex-grow bg-slate-800/60 border-slate-700/50 rounded-lg py-2.5 px-3 sm:py-3 sm:px-4 text-slate-100 placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-accent/50 transition-shadow">
+                            <input type="text" id="message-input" placeholder="Ask about Starlight or your documents..." class="flex-grow bg-slate-800/60 border-slate-700/50 rounded-lg py-2.5 px-3 sm:py-3 sm:px-4 text-slate-100 placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-accent/50 transition-shadow">
                             <button type="submit" class="bg-accent hover:bg-accent/80 text-primary-text rounded-lg p-2.5 sm:p-3 transition-colors flex-shrink-0">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-send-horizontal h-5 w-5 sm:h-6 sm:w-6"><path d="m3 3 3 9-3 9 19-9Z"/><path d="M6 12h16"/></svg>
                             </button>
