--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
 
                             <!-- Theme Mode Switch -->
                             <button id="theme-toggle-button" type="button" aria-label="Toggle theme"
-                            class="mode-button flex items-center gap-2 py-2 px-3 rounded-lg transition-colors text-sm font-semibold focus:outline-none focus:ring-2 focus:ring-accent">
+                            class="utility-button flex items-center justify-center w-10 h-10 rounded-full transition-colors focus:outline-none focus:ring-2 focus:ring-accent">
                                 <i data-lucide="sun" class="h-5 w-5 text-icon-color theme-icon-sun"></i>
                                 <i data-lucide="moon" class="h-5 w-5 text-icon-color hidden theme-icon-moon"></i>
                             </button>
 
                             <!-- Feedback Button -->
                             <button id="main-feedback-button" type="button" aria-label="Give Feedback"
-                            class="mode-button flex items-center gap-2 py-2 px-3 rounded-lg transition-colors text-sm font-semibold focus:outline-none focus:ring-2 focus:ring-accent">
+                            class="utility-button flex items-center justify-center w-10 h-10 rounded-full transition-colors focus:outline-none focus:ring-2 focus:ring-accent">
                                 <i data-lucide="message-square-heart" class="h-5 w-5 text-icon-color"></i>
                             </button>
                         </div>
