--- a/index.html
+++ b/index.html
@@ -432,6 +432,22 @@
         </div>
     </div>
 
+    <!-- Delete Confirmation Modal -->
+    <div id="delete-confirm-modal" class="fixed inset-0 z-[101] flex items-center justify-center p-4 bg-black/60 hidden">
+        <div class="glass-effect w-full max-w-sm rounded-2xl shadow-2xl p-6 relative flex flex-col">
+            <h2 class="text-xl sm:text-2xl font-bold text-slate-100 mb-4 text-center">Confirm Deletion</h2>
+            <p id="delete-confirm-message" class="text-slate-300 text-center mb-6">Are you sure you want to delete this file? This action cannot be undone.</p>
+            <div class="flex justify-end gap-4">
+                <button id="cancel-delete-button" class="py-2.5 px-6 bg-slate-800/60 hover:bg-slate-700/80 rounded-lg transition-colors font-semibold">Cancel</button>
+                <button id="confirm-delete-button" class="py-2.5 px-6 bg-red-600/80 hover:bg-red-600/100 text-white rounded-lg transition-colors font-semibold">Delete</button>
+            </div>
+            <button id="close-delete-modal" class="absolute top-4 right-4 p-2 rounded-full bg-slate-800/60 hover:bg-slate-700/80 text-slate-300">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-5 w-5"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
+            </button>
+        </div>
+    </div>
+
+
     <!-- Markdown & Sanitizer Libraries -->
     <!-- marked.js for Markdown to HTML conversion -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
