--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         <div class="glass-effect w-full max-w-sm rounded-2xl shadow-2xl p-6 relative flex flex-col">
             <h2 class="text-xl sm:text-2xl font-bold text-slate-100 mb-4 text-center">Confirm Deletion</h2>
             <p id="delete-confirm-message" class="text-slate-300 text-center mb-6">Are you sure you want to delete this file? This action cannot be undone.</p>
-            <div class="flex justify-end gap-4">
+            <div class="flex justify-center gap-4">
                 <button id="cancel-delete-button" class="py-2.5 px-6 bg-slate-800/60 hover:bg-slate-700/80 rounded-lg transition-colors font-semibold">Cancel</button>
                 <button id="confirm-delete-button" class="py-2.5 px-6 bg-red-600/80 hover:bg-red-600/100 text-white rounded-lg transition-colors font-semibold">Delete</button>
             </div>
