Updated: API implementation according to backend API documentation

--- a/index.html
+++ b/index.html
@@ -398,6 +398,12 @@
                     </button>
                 </div>
             </div>
+            <!-- Save Settings Button -->
+            <div class="border-t border-border-main pt-4">
+                <button id="save-settings-button" class="w-full flex items-center justify-center gap-2 py-2.5 px-4 bg-accent hover:bg-accent/80 text-primary-text rounded-lg transition-colors text-sm font-semibold">
+                    <span>Save Settings</span>
+                </button>
+            </div>
         </div>
     </div>
 
